installed required libs, auth page styles

--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -1,1 +1,8 @@
-<p>auth-page works!</p>
+<svg-icon [iconName]="'app-logo'"></svg-icon>
+<app-button
+  class="w-64"
+  [bgClass]="'bg-green'"
+  [text]="'Test Text'"
+  [iconName]="'google'"
+  [text]="buildTranslationKey('signInWithGoogle') | translate"
+></app-button>
