--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -1,8 +1,8 @@
 <svg-icon [iconName]="'app-logo'"></svg-icon>
 <app-button
-  class="w-64"
-  [bgClass]="'bg-green'"
-  [text]="'Test Text'"
+  class="bg-green text-white hover:bg-hover-green"
   [iconName]="'google'"
   [text]="buildTranslationKey('signInWithGoogle') | translate"
+  [loading]="authLoading$ | async"
+  (click)="googleLogin()"
 ></app-button>
