--- a/src/app/modules/design-system/components/svg-icon/svg-icon.component.scss
+++ b/src/app/modules/design-system/components/svg-icon/svg-icon.component.scss
@@ -5,4 +5,16 @@
     @apply inline-block;
     all: inherit;
   }
+
+  &.charcoal {
+    @apply text-charcoal;
+  }
+
+  &.white {
+    @apply text-white;
+  }
+
+  &.green {
+    @apply text-green;
+  }
 }
