--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,9 @@ body {
     @apply text-green hover:bg-green hover:text-white font-bold font-main text-base #{!important};
   }
 }
+
+.mat-mdc-tooltip {
+  .mdc-tooltip__surface {
+    @apply font-main text-sm bg-blue #{!important};
+  }
+}
