generic header and cinfo cards

--- a/src/app/modules/design-system/components/page-header/page-header.component.html
+++ b/src/app/modules/design-system/components/page-header/page-header.component.html
@@ -1,1 +1,1 @@
-<span class="text-dark text-2xl font-main font-bold">{{ title }}</span>
+<span class="text-charcoal text-2xl font-main font-bold">{{ title }}</span>
