--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
@@ -11,5 +11,6 @@
     [iconColor]="routerLinkActive.isActive ? 'green' : 'white'"
     [matTooltip]="item.tooltipTranslationKey | translate"
     [matTooltipPosition]="'right'"
+    [buttonSize]="'w-8'"
   ></app-button>
 </a>
