--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -1,6 +1,7 @@
 <svg-icon [iconName]="'app-logo'"></svg-icon>
+
 <app-button
-  class="bg-green text-white hover:bg-hover-green w-60"
+  class="bg-green text-white hover:bg-hover-green"
   [iconName]="'google'"
   [text]="buildTranslationKey('signInWithGoogle') | translate"
   [loading]="authLoading$ | async"
