--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body {
-  font-family: 'Lato', sans-serif;
-}
 
 html,
 body {
@@ -16,7 +12,7 @@ body {
 
 body {
   @apply m-0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .mat-mdc-snack-bar-container {
