--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -5,5 +5,6 @@
   [iconName]="'google'"
   [text]="buildTranslationKey('signInWithGoogle') | translate"
   [loading]="authLoading$ | async"
+  [buttonSize]="'large'"
   (click)="googleLogin()"
 ></app-button>
