--- a/src/app/modules/budget-tracker/modules/dashboard/components/balance-info-card/balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/balance-info-card/balance-info-card.component.html
@@ -1,6 +1,9 @@
 <app-info-card
   [iconBGClass]="'bg-light-blue'"
   [iconName]="'balance'"
-  [primaryText]="balance$ | async"
-  [secondaryText]="buildTranslationKey('title') | translate"
+  [twoLine]="true"
+  [primaryText]="currentBalance$ | async"
+  [secondaryText]="buildTranslationKey('currentBalance') | translate"
+  [additionalPrimaryText]="fullBalance$ | async"
+  [additionalSecondaryText]="buildTranslationKey('fullBalance') | translate"
 ></app-info-card>
