--- a/src/app/modules/budget-tracker/modules/dashboard/components/free-money-info-card/free-money-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/free-money-info-card/free-money-info-card.component.html
@@ -1,6 +1,6 @@
 <app-info-card
   [iconName]="'coins'"
-  [bgMode]="'dark'"
+  [bgMode]="'charcoal'"
   [primaryText]="freeMoney$ | async"
   [secondaryText]="buildTranslationKey('title') | translate"
 ></app-info-card>
