menu for balance

--- a/src/app/modules/budget-tracker/modules/dashboard/components/balance-info-card/balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/balance-info-card/balance-info-card.component.html
@@ -6,4 +6,6 @@
   [secondaryText]="buildTranslationKey('currentBalance') | translate"
   [additionalPrimaryText]="fullBalance$ | async"
   [additionalSecondaryText]="buildTranslationKey('fullBalance') | translate"
+  [menuActions]="menuActions"
+  [shouldDisplayMenu]="true"
 ></app-info-card>
