--- a/src/app/modules/budget-tracker/modules/dashboard/components/free-money-info-card/free-money-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/free-money-info-card/free-money-info-card.component.html
@@ -3,4 +3,6 @@
   [bgMode]="'charcoal'"
   [primaryText]="freeMoney$ | async"
   [secondaryText]="buildTranslationKey('title') | translate"
+  [shouldDisplayMenu]="true"
+  [menuActions]="menuActions$ | async"
 ></app-info-card>
