--- a/src/app/modules/design-system/components/custom-menu-item/custom-menu-item.component.html
+++ b/src/app/modules/design-system/components/custom-menu-item/custom-menu-item.component.html
@@ -4,5 +4,5 @@
 >
   <svg-icon *ngIf="iconName" class="w-6 h-6 {{ iconColor }}" [iconName]="iconName"></svg-icon>
 
-  <span *ngIf="text" class="font-main text-base" [class.grayscale]="disabled">{{ text }}</span>
+  <span *ngIf="text" class="font-main text-sm text-charcoal" [class.grayscale]="disabled">{{ text }}</span>
 </button>
