--- a/src/app/modules/budget-tracker/modules/dashboard/components/savings-info-card/savings-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/savings-info-card/savings-info-card.component.html
@@ -3,4 +3,6 @@
   [bgMode]="'green'"
   [primaryText]="savings$ | async"
   [secondaryText]="buildTranslationKey('title') | translate"
+  [shouldDisplayMenu]="true"
+  [menuActions]="menuActions$ | async"
 ></app-info-card>
