--- a/src/app/modules/budget-tracker/modules/dashboard/components/balance-info-card/balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/balance-info-card/balance-info-card.component.html
@@ -1,6 +1,6 @@
 <app-info-card
   [iconBGClass]="'bg-light-blue'"
-  [iconName]="'balance'"
+  [iconName]="'equal-sign'"
   [twoLine]="true"
   [primaryText]="currentBalance$ | async"
   [secondaryText]="buildTranslationKey('currentBalance') | translate"
