--- a/src/app/modules/budget-tracker/modules/dashboard/components/expense-info-card/expense-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/expense-info-card/expense-info-card.component.html
@@ -1,6 +1,7 @@
 <app-info-card
   [iconBGClass]="'bg-light-red'"
-  [iconName]="'down-arrow'"
+  [iconColorClass]="'text-red'"
+  [iconName]="'arrow-down'"
   [primaryText]="expense$ | async"
   [secondaryText]="buildTranslationKey('title') | translate"
 ></app-info-card>
