--- a/src/app/modules/budget-tracker/modules/dashboard/components/income-info-card/income-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/income-info-card/income-info-card.component.html
@@ -1,6 +1,7 @@
 <app-info-card
   [iconBGClass]="'bg-light-green'"
-  [iconName]="'up-arrow'"
+  [iconColorClass]="'text-dark-green'"
+  [iconName]="'arrow-up'"
   [primaryText]="income$ | async"
   [secondaryText]="buildTranslationKey('title') | translate"
 ></app-info-card>
