--- a/src/app/modules/design-system/components/info-card/info-card.component.html
+++ b/src/app/modules/design-system/components/info-card/info-card.component.html
@@ -1,11 +1,11 @@
 <app-menu
   *ngIf="shouldDisplayMenu && menuActions?.length"
   class="absolute right-2 top-2"
-  [colorMode]="bgMode"
+  [colorScheme]="menuColorScheme"
   [menuActions]="menuActions"
 ></app-menu>
 
-<svg-icon-with-bg [iconBGClass]="iconBGClass" [iconName]="iconName"></svg-icon-with-bg>
+<svg-icon-with-bg class="{{ iconBGClass }} {{ iconColorClass }}" [iconName]="iconName"></svg-icon-with-bg>
 
 <div class="flex flex-1 flex-col">
   <span class="primary font-main font-bold {{ twoLine ? 'text-sm' : 'text-xl' }}">{{ primaryText }}</span>
