activity log, note and ui improvments

--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -1,4 +1,4 @@
-<svg-icon [iconName]="'app-logo'"></svg-icon>
+<svg-icon [iconName]="'app-logo'" [autoSize]="true"></svg-icon>
 
 <app-button
   [iconName]="'google'"
