--- a/src/app/modules/design-system/components/custom-menu-item/custom-menu-item.component.scss
+++ b/src/app/modules/design-system/components/custom-menu-item/custom-menu-item.component.scss
@@ -1,6 +1,6 @@
 :host {
   &.disabled {
-    @apply cursor-default pointer-events-none grayscale;
+    @apply cursor-default pointer-events-none;
   }
 
   &.small {
