--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -6,6 +6,7 @@
     [text]="action.text"
     [iconName]="action.icon"
     [buttonSize]="'full'"
+    [disabled]="action.disabled"
     (click)="action.action()"
   ></custom-menu-item>
 </mat-menu>
