--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center w-full">
-  <svg-icon class="w-10 h-10 text-white" [iconName]="'small-logo'"></svg-icon>
+  <svg-icon class="logo text-white" [iconName]="'small-logo'"></svg-icon>
   <span class="flex gap-x-1 my-4">
     <span class="w-1 h-1 bg-white rounded-full"></span>
     <span class="w-1 h-1 bg-white rounded-full"></span>
