--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
@@ -1,3 +1,7 @@
 :host {
   @apply flex flex-col justify-between items-center w-16 bg-charcoal py-5;
+
+  .logo {
+    @apply w-10 h-10 #{!important};
+  }
 }
