--- a/src/app/modules/design-system/components/custom-menu-item/custom-menu-item.component.html
+++ b/src/app/modules/design-system/components/custom-menu-item/custom-menu-item.component.html
@@ -1,9 +1,12 @@
 <button
   class="w-full flex items-center justify-start gap-x-1.5  {{ text ? 'px-3 py-1.5' : 'px-1 py-1' }}"
   [type]="'button'"
-  [class.grayscale]="disabled"
 >
-  <svg-icon *ngIf="iconName" class="w-6 h-6 text-charcoal" [iconName]="iconName"></svg-icon>
+  <svg-icon
+    *ngIf="iconName"
+    class="w-6 h-6 {{ isDisabled ? 'text-grey' : 'text-charcoal' }}"
+    [iconName]="iconName"
+  ></svg-icon>
 
-  <span *ngIf="text" class="font-main text-sm text-charcoal">{{ text }}</span>
+  <span *ngIf="text" class="font-main text-sm {{ isDisabled ? 'text-grey' : 'text-charcoal' }}">{{ text }}</span>
 </button>
