--- a/src/app/modules/budget-tracker/modules/dashboard/components/info-card-value-modal/info-card-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/info-card-value-modal/info-card-value-modal.component.html
@@ -19,7 +19,7 @@
   ></app-button>
 
   <app-button
-    [buttonSize]="'big'"
+    [buttonSize]="'medium'"
     [colorScheme]="colorScheme.Charcoal"
     [text]="mainButtonText | translate"
     [disabled]="shouldDisableButton"
