--- a/src/app/modules/budget-tracker/modules/dashboard/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/activity-log/activity-log.component.html
@@ -1,16 +1,29 @@
 <span class="font-main font-bold text-charcoal text-xl">{{ buildTranslationKey('title') | translate }}</span>
 
-<div class="flex flex-col gap-y-8 overflow-y-auto scrollable">
-  <div *ngFor="let day of activityLog$ | async" class="flex flex-col gap-6">
-    <span class="block font-main text-grey text-sm">{{ day.date }}</span>
+<div
+  #list
+  *ngVar="isEmpty$ | async as isEmpty"
+  class="flex flex-col gap-y-8 overflow-y-auto h-full"
+  [class.justify-center]="isEmpty"
+  [class.items-center]="isEmpty"
+  [class.scrollable]="!isEmpty && list.scrollHeight > list.clientHeight"
+>
+  <span *ngIf="isEmpty" class="font-main font-bold text-charcoal text-lg">
+    {{ buildTranslationKey('emptyStateText') | translate }}
+  </span>
 
-    <ng-container *ngFor="let record of day.records">
-      <ng-container [ngSwitch]="record.recordType">
-        <app-root-value-change-record
-          *ngSwitchCase="recordType.RootValueChange"
-          [record]="record"
-        ></app-root-value-change-record>
+  <ng-container *ngIf="!isEmpty">
+    <div *ngFor="let day of activityLog$ | async" class="flex flex-col gap-6">
+      <span class="block font-main text-grey text-sm">{{ day.date }}</span>
+
+      <ng-container *ngFor="let record of day.records">
+        <ng-container [ngSwitch]="record.recordType">
+          <app-root-value-change-record
+            *ngSwitchCase="recordType.RootValueChange"
+            [record]="record"
+          ></app-root-value-change-record>
+        </ng-container>
       </ng-container>
-    </ng-container>
-  </div>
+    </div>
+  </ng-container>
 </div>
