--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@ body {
 }
 
 .mat-mdc-menu-content {
-  @apply px-1 #{!important};
+  @apply flex flex-col gap-y-2 px-1 #{!important};
 }
 
 // DIALOG
