--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -5,6 +5,6 @@
   [colorScheme]="colorScheme.Green"
   [text]="buildTranslationKey('signInWithGoogle') | translate"
   [loading]="authLoading$ | async"
-  [buttonSize]="'big'"
+  [buttonSize]="'large'"
   (click)="googleLogin()"
 ></app-button>
