--- a/src/app/modules/budget-tracker/modules/dashboard/components/info-card-value-modal/info-card-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/info-card-value-modal/info-card-value-modal.component.html
@@ -10,7 +10,7 @@
     <textarea matInput rows="3" class="scrollable" [formControl]="noteInput"></textarea>
   </mat-form-field>
 </div>
-<div mat-dialog-actions class="flex items-center justify-end gap-x-4">
+<div mat-dialog-actions>
   <app-button
     [buttonSize]="'auto'"
     [colorScheme]="colorScheme.TransparentDark"
