add value to category func-ty is done

--- a/src/app/modules/budget-tracker/modules/dashboard/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/activity-log/activity-log.component.html
@@ -18,15 +18,14 @@
 
       <ng-container *ngFor="let record of day.records">
         <ng-container [ngSwitch]="record.recordType">
-          <app-root-value-change-record
-            *ngSwitchCase="recordType.RootValueChange"
-            [record]="record"
-          ></app-root-value-change-record>
+          <app-root-value-change-record *ngSwitchCase="recordType.RootValueChange" [record]="record">
+          </app-root-value-change-record>
 
-          <app-category-management-record
-            *ngSwitchCase="recordType.CategoryManagement"
-            [record]="record"
-          ></app-category-management-record>
+          <app-category-management-record *ngSwitchCase="recordType.CategoryManagement" [record]="record">
+          </app-category-management-record>
+
+          <app-category-value-change-record *ngSwitchCase="recordType.CategoryValueChange" [record]="record">
+          </app-category-value-change-record>
         </ng-container>
       </ng-container>
     </div>
