all categories reset

--- a/src/app/modules/budget-tracker/modules/dashboard/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/activity-log/activity-log.component.html
@@ -26,6 +26,11 @@
 
           <app-category-value-change-record *ngSwitchCase="recordType.CategoryValueChange" [record]="record">
           </app-category-value-change-record>
+
+          <app-categories-reset-record
+            *ngSwitchCase="recordType.CategoriesReset"
+            [record]="record"
+          ></app-categories-reset-record>
         </ng-container>
       </ng-container>
     </div>
