--- a/src/app/modules/budget-tracker/modules/dashboard/components/info-cards/expense-info-card/expense-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/info-cards/expense-info-card/expense-info-card.component.html
@@ -4,4 +4,6 @@
   [iconName]="'arrow-down'"
   [primaryText]="expense$ | async"
   [secondaryText]="buildTranslationKey('title') | translate"
+  [menuActions]="menuActions"
+  [shouldDisplayMenu]="shouldDisplayMenu$ | async"
 ></app-info-card>
