--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.scss
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.scss
@@ -6,7 +6,7 @@
       @apply relative;
 
       &::before {
-        @apply absolute top-0 left-0 w-1 bg-dark-green h-full block rounded-tr-sm rounded-br-sm;
+        @apply absolute top-0 left-0 w-1 bg-green h-full block rounded-tr-sm rounded-br-sm;
         content: '';
       }
     }
