removed empty scss files

--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -2,7 +2,7 @@
 
 <app-button
   [iconName]="'google'"
-  [colorScheme]="colorScheme.Green"
+  [colorScheme]="'green'"
   [text]="buildTranslationKey('signInWithGoogle') | translate"
   [loading]="authLoading$ | async"
   [buttonSize]="'large'"
