--- a/src/app/modules/design-system/components/info-card/info-card.component.scss
+++ b/src/app/modules/design-system/components/info-card/info-card.component.scss
@@ -1,6 +1,7 @@
 :host {
   @apply flex py-4 px-5 rounded-lg h-28 justify-start items-center gap-x-5 relative;
 
+  // COLORS
   &.white {
     @apply bg-white;
 
