--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
@@ -2,12 +2,11 @@
   class="link flex items-center justify-center w-full py-2"
   [routerLink]="item.routerLink"
   [routerLinkActive]="'active'"
-  [class.cursor-default]="routerLinkActive.isActive"
   #routerLinkActive="routerLinkActive"
 >
   <app-button
     [iconName]="item.iconName"
-    [colorScheme]="routerLinkActive.isActive ? colorScheme.ActiveNavigationItem : colorScheme.TransparentLight"
+    [colorScheme]="routerLinkActive.isActive ? 'active-navigation-item' : 'transparent-light'"
     [matTooltip]="item.tooltipTranslationKey | translate"
     [matTooltipPosition]="'right'"
   ></app-button>
