--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -12,7 +12,7 @@
 
 <app-button
   [iconName]="'logout'"
-  [colorScheme]="colorScheme.TransparentLight"
+  [colorScheme]="'transparent-light'"
   [matTooltip]="buildTranslationKey('itemTooltip.logout') | translate"
   [matTooltipPosition]="'right'"
   (click)="logOut()"
