--- a/src/app/modules/budget-tracker/modules/dashboard/components/info-card-value-modal/info-card-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/components/info-card-value-modal/info-card-value-modal.component.html
@@ -13,14 +13,14 @@
 <div mat-dialog-actions>
   <app-button
     [buttonSize]="'auto'"
-    [colorScheme]="colorScheme.TransparentDark"
+    [colorScheme]="'transparent-dark'"
     [text]="buildTranslationKey('cancel') | translate"
     (click)="cancelClick()"
   ></app-button>
 
   <app-button
     [buttonSize]="'medium'"
-    [colorScheme]="colorScheme.Charcoal"
+    [colorScheme]="'charcoal'"
     [text]="mainButtonText | translate"
     [disabled]="shouldDisableButton"
     [loading]="(loading$ | async) || (success$ | async)"
